# stremio-linux-shell

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
data/: com.stremio.Stremio.metainfo.xml
flatpak/: com.stremio.Stremio.Devel.json
src/: config.rs  main.rs
src/app/: config.rs  imp.rs  mod.rs
src/app/settings_window/: imp.rs  mod.rs  settings_window.ui
src/app/tray/: imp.rs
src/app/video/: config.rs  mod.rs
src/app/webview/: gl.rs  imp.rs  mod.rs  shader.frag  shader.vert
src/app/window/: imp.rs  mod.rs  window.ui
src/chromium/: config.rs  ipc.js  mod.rs  types.rs
src/chromium/app/: browser_process_handler.rs  mod.rs  process.rs  render_process_handler.rs
src/chromium/app/client/: display_handler.rs  lifespan_handler.rs  load_handler.rs  mod.rs  permission_handler.rs  render_handler.rs
src/discord/: adapter.rs
src/mpris/: adapter.rs  metadata.rs  mod.rs  service.rs
src/shared/: mod.rs  pbo_manager.rs  states.rs  types.rs
src/shared/ipc/: event.rs  mod.rs  request.rs
