[package]
name = "stremio-linux-shell"
version = "1.0.0-beta.12"
authors = ["Stremio"]
homepage = "https://stremio.com"
repository = "https://github.com/Stremio/stremio-linux-shell"
license = "GPL-3.0-only"
edition = "2024"

[features]
offline-build = []

[dependencies]
gtk = { package = "gtk4", version = "0.10.3", features = ["v4_20"] }
adw = { package = "libadwaita", version = "0.8.1", features = ["v1_8"] }
cef = { version = "143.1.0+143.0.10", git = "https://github.com/Stremio/cef-rs", features = [
    "accelerated_osr",
] }
tokio = { version = "1.48.0", features = ["full"] }
ashpd = { version = "0.12.0", features = ["gtk4"] }
ksni = "0.3.1"
libloading = "0.9.0"
epoxy = "0.1.0"
serde_json = "1.0.145"
tracing = "0.1.41"
serde = "1.0.228"
libc = "0.2.177"
itertools = "0.14.0"
tracing-subscriber = "0.3.20"
rand = "0.9.2"
libmpv2 = "5.0.1"
clap = { version = "4.5.51", features = ["derive"] }
image = "0.25.8"
chrono = "0.4.42"
regex = "1.11.1"
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
anyhow = "1.0.100"
url = "2.5.7"
dirs = "6.0.0"
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
flume = "0.11.1"
crossbeam-queue = "0.3.12"
rayon = "1.11.0"
mimalloc = "0.1.48"
zbus = { version = "4.4.0", features = ["tokio"] }

[build-dependencies]
anyhow = "1.0.100"
serde = "1.0.228"
serde_json = "1.0.145"
toml = "0.9.8"
ureq = { version = "3.1.4", features = ["json"] }
bzip2 = "0.6.1"
tar = "0.4.44"
globset = "0.4.18"
mimalloc = "0.1.48"
